--- a/ex2/VietHQ_ASM_FRAMEWORKS_NGAY_2/pom.xml
+++ b/ex2/VietHQ_ASM_FRAMEWORKS_NGAY_2/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.viethq.dulich5chau</groupId>
-    <artifactId>dulich5chau</artifactId>
+    <groupId>com.viethq.productmanagement</groupId>
+    <artifactId>productmanagement</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <properties>
