--- a/ex7/VietHQ_ASM_FRAMEWORKS_NGAY_7/pom.xml
+++ b/ex7/VietHQ_ASM_FRAMEWORKS_NGAY_7/pom.xml
@@ -79,6 +79,13 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
