--- a/final_project/ShoppingOnline/pom.xml
+++ b/final_project/ShoppingOnline/pom.xml
@@ -14,6 +14,7 @@
         <jstl.version>1.2</jstl.version>
         <hibernate.version>5.3.6.Final</hibernate.version>
         <jackson-2-version>2.9.5</jackson-2-version>
+        <springsecurity.version>4.2.9.RELEASE</springsecurity.version>
     </properties>
 
     <dependencies>
@@ -53,6 +54,18 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>1.11.15.RELEASE</version>
+        </dependency>
+
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${springsecurity.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
