--- a/final_project/ShoppingOnline/src/main/webapp/WEB-INF/spring-config/config.properties
+++ b/final_project/ShoppingOnline/src/main/webapp/WEB-INF/spring-config/config.properties
@@ -5,3 +5,6 @@ jdbc.username=root
 jdbc.password=123456
 #resource setting
 resources.imageFolder=/home/viet/Desktop/Workspace/Git/FNANO/FNANO_Repo/resources/img/
+#security
+security.user_query=Select u.username, u.password, u.enabled from ShopDB.tblUser u where u.username=?
+security.role_by_user=select u.username, r.name as role from ShopDB.tblUser u, ShopDB.tblRole r where u.role_id = r.id and u.username=?
